# seg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  sample-data.jsonl  test_input.txt
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: lib.rs
data/: Cargo.toml
data/src/: lib.rs
seg-cli/: Cargo.toml  Dockerfile  Dockerfile.dev  run-dev-container.nu
seg-cli/src/: data.rs  firewall.rs  main.rs  util.rs
seg-viewer/: package-lock.json  package.json  pnpm-lock.yaml
seg-viewer/src-tauri/: Cargo.toml  tauri.conf.json
seg-viewer/src-tauri/src/: main.rs
seg-viewer/src/lib/: types.ts
seg-viewer/src/lib/components/: SigmaGraph.svelte
seg-viewer/src/routes/: +page.svelte
src/: consts.rs  data.rs  firewall.rs  main.rs  network.rs  rules.nft  util.rs
vagrant/hyper-v/: Vagrantfile
viewer/: Cargo.toml
viewer/src/: drawers.rs  main.rs
