[package]
name = "seg"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
nix = { version = "0.29.0", features = ["net", "socket", "uio"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }
uio = "0.4.0"
