[package]
name = "seg"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ ".", "viewer", "data" ]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
pnet = "0.35.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["full"] }
data = { path = "./data" }
