[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
egui = { version = "0.29.1", features = ["persistence"] }
egui_graphs = { version = "0.22.0", features = ["egui_persistence", "serde"] }
serde = "1.0.213"
serde_json = "1.0.132"
